<resources>
    <string name="app_name">NotiFind</string>
    <string name="forgot_pas">Forgot Password</string>
    <string name="Email_Input">Email</string>
    <string name="Password_Input">Password</string>
    <string name="Login_Button">Login</string>
    <string name="signup_to_notifind">Sign Up To NotiFind</string>
    <string name="enter_address">Address</string>
    <string name="enter_name">Name</string>
    <string name="enter_surname">Surname</string>
    <string name="signup">Sign Up</string>
    <string name="goBack">Back To Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="forgotPasswordTextView">Enter Your Email</string>
    <string name="submit_email">Submit Email</string>
    <string name="return_to_login">Return to Login</string>
    <string name="todo">TODO</string>
    <string name="Name">Name</string>
    <string name="surname">Surname</string>
    <string name="age">Age</string>
    <string name="Eye_color">Eye Color</string>
    <string name="Weight">Weight</string>
    <string name="height">Height</string>
    <string name="last_location">Last Location</string>
    <string name="describe_the_missing_person">Describe the Missing person</string>
    <string name="description">Description</string>
    <string name="mail">Enter Email</string>
    <string name="taunt">Did you forget your Password</string>
    <string name="back">Back to Previous</string>
    <string name="reports">Reports</string>
    <string name="support">Support</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_light_theme">Light Theme</string>
    <string name="menu_dark_theme">Dark Theme</string>
    <string name="Ad_sign_up">Sign Up</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="address">Enter Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="change_my_email">Change My Email</string>
    <string name="change_my_password">Change My Password</string>
    <string name="change_my_location">Change My Location</string>
    <string name="my_account">MY Account</string>
    <string name="MyAccount">My Account</string>
    <string name="change">Change</string>
    <string name="contact">Contact</string>
    <string name="back_to_settings">Back to settings</string>
    <string name="my_privacy_settings">My Privacy Settings</string>
    <string name="show_my_profile">Show my profile</string>
    <string name="show_status">Show Status</string>
    <string name="show_location">Show Location</string>
    <string name="return_to_settings">Return to Settings</string>
    <string name="show_notification">Show Notification</string>
    <string name="account_settings">Account Settings</string>
    <string name="privacy_settings">Privacy settings</string>
    <string name="about">About</string>
    <string name="close_account">Close Account</string>
    <string name="aboutus">About Us</string>
    <string name="about1">We the motivated creators and maintainers of the NotiFind missing persons applcation is dedicated to hellping our communities find the people that they Have lost.</string>
    <string name="about2">Making use use of the latest in reporting software, our NotiFind application is one of the best choices you can make to help find the peole that you just saw a minute ago. \n \n We aim to help those that lost there loved ones to find them again. Notifind along with the Police and the local neighborhood watch aasociations are all dedicated in achieving this remarkable goal together and make south africa found and great.</string>
    <string name="report_edits">Report Viewing Screen</string>
    <string name="report_creation">Report Creation Screen</string>

    <string-array name="locations">
        <item>Western Cape</item>
        <item>Eastern Cape</item>
        <item>Northern Cape</item>
        <item>Free State</item>
        <item>North West</item>
        <item>Gauteng</item>
        <item>Mpumalanga</item>
        <item>KwaZulu-Natal</item>
        <item>Limpopo</item>
    </string-array>
</resources>