<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0F222D"


    tools:context=".Activities.AccountSettingsActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="17dp"
        android:background="#0F222D"
        android:textColor="#FFFFFF"
        android:text="@string/back_to_settings" />

    <EditText
        android:id="@+id/changeEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="232dp"
        android:ems="10"
        android:hint="@string/change_my_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorHint="#FFFFFF"
        tools:ignore="RelativeOverlap,TextFields" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="168dp"
        android:text="@string/MyAccount"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        tools:ignore="RelativeOverlap" />

    <EditText
        android:id="@+id/changePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="294dp"
        android:ems="10"
        android:hint="@string/change_my_password"
        android:textColorHint="#FFFFFF"
        android:inputType="textPassword"
        tools:ignore="Autofill,RelativeOverlap" />

    <EditText
        android:id="@+id/changeLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="17dp"
        android:layout_marginBottom="327dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/change_my_location"
        android:textColorHint="#FFFFFF"
        android:autofillHints="" />

    <Button
        android:id="@+id/button2"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="19dp"
        android:layout_marginBottom="159dp"
        android:background="#0F222D"
        android:text="@string/contact"
        android:textColor="#FFEB3B" />

    <Button
        android:id="@+id/changeEmailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="95dp"
        android:background="#0F222D"
        android:onClick="changeEmailButtonClicked"
        android:text="@string/change"
        android:textColor="#FFEB3B"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/changeLocationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="358dp"
        android:layout_marginEnd="95dp"
        android:background="#0F222D"
        android:onClick="changeLocationButtonClicked"
        android:text="@string/change"
        android:textColor="#FFEB3B"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/changePasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="293dp"
        android:layout_marginEnd="95dp"
        android:background="#0F222D"
        android:onClick="changePasswordButtonClicked"
        android:text="@string/change"
        android:textColor="#FFEB3B"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>