<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0F222D"
    tools:context=".Activities.AdminCreationActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="286dp"
        android:layout_height="619dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="61dp"
        android:layout_marginTop="67dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gloss">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="161dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="46dp"
                app:srcCompat="@drawable/logo" />

            <EditText
                android:id="@+id/adminEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="207dp"
                android:layout_marginEnd="33dp"
                android:background="#A69F9F"
                android:ems="10"
                android:hint="@string/Email_Input"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/adminPhoneNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="435dp"
                android:layout_marginEnd="32dp"
                android:background="#A69F9F"
                android:ems="10"
                android:hint="@string/enter_phone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/adminLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="33dp"
                android:layout_marginBottom="241dp"
                android:background="#A69F9F"
                android:ems="10"
                android:hint="@string/enter_address"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/adminPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="33dp"
                android:layout_marginBottom="314dp"
                android:background="#A69F9F"
                android:hint="@string/Password_Input"
                android:ems="10"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/adminPostBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="98dp"
                android:layout_marginBottom="57dp"
                android:text="@string/Ad_sign_up" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="44dp"
                android:layout_marginTop="187dp"
                android:text="@string/enter_email" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="44dp"
                android:layout_marginTop="415dp"
                android:text="@string/enter_phone" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="44dp"
                android:layout_marginTop="334dp"
                android:text="@string/address" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="44dp"
                android:layout_marginTop="260dp"
                android:text="@string/enter_password" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>